--- a/exarea/View/Base.lproj/Main.storyboard
+++ b/exarea/View/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="نام نمایشگاه" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Dv-PT-r3o">
-                                                            <rect key="frame" x="13.5" y="150" width="120" height="14"/>
+                                                            <rect key="frame" x="13.5" y="150" width="120" height="20.5"/>
                                                             <fontDescription key="fontDescription" name="IRANSans" family="IRANSans" pointSize="12"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -111,7 +111,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dFu-Wr-yg4" customClass="ImageSlideshow" customModule="ImageSlideshow">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </view>
                                     </subviews>
@@ -153,7 +153,6 @@
         <!--Main View Controller-->
         <scene sceneID="qHc-BH-k3f">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iBt-cj-qyh" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController storyboardIdentifier="MainVC" hidesBottomBarWhenPushed="YES" id="ozJ-rn-8V0" customClass="MainViewController" customModule="exarea" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="KEM-DH-lmi">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="search" id="Fg9-ZM-zcr"/>
@@ -208,6 +207,7 @@
                         <segue destination="h1O-Ke-vGC" kind="relationship" relationship="viewControllers" id="oIU-mI-R20"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iBt-cj-qyh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2106" y="32"/>
         </scene>
@@ -808,12 +808,12 @@
                                     <constraint firstAttribute="width" secondItem="bA2-lf-sCU" secondAttribute="height" id="wjl-f2-IPA"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oF6-oE-POU" customClass="CosmosView" customModule="Cosmos">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oF6-oE-POU" customClass="CosmosView" customModule="Cosmos">
                                 <rect key="frame" x="10" y="244.5" width="87" height="15"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="starSize">
-                                        <real key="value" value="15"/>
+                                        <real key="value" value="20"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
                                         <color key="value" red="0.094117647060000004" green="0.25098039220000001" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -842,10 +842,10 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ZXZ-MT-5if">
-                                <rect key="frame" x="285" y="242" width="80" height="20"/>
+                                <rect key="frame" x="270" y="239.5" width="95" height="25"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pvv-8g-dLV">
-                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
                                         <color key="tintColor" red="0.094117647060000004" green="0.25098039220000001" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" image="icon-location-100"/>
                                         <connections>
@@ -853,12 +853,15 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOF-xZ-HiT">
-                                        <rect key="frame" x="30" y="0.0" width="20" height="20"/>
+                                        <rect key="frame" x="35" y="0.0" width="25" height="25"/>
                                         <color key="tintColor" red="0.094117647060000004" green="0.25098039220000001" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" image="icon-bookmark-75"/>
+                                        <connections>
+                                            <action selector="checkFave" destination="4zf-G4-Fez" eventType="touchUpInside" id="9Np-kw-A9O"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hqm-1J-8PQ">
-                                        <rect key="frame" x="60" y="0.0" width="20" height="20"/>
+                                        <rect key="frame" x="70" y="0.0" width="25" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="hqm-1J-8PQ" secondAttribute="height" id="iEQ-Id-3N5"/>
                                         </constraints>
@@ -867,10 +870,10 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="FeJ-qo-7ED"/>
+                                    <constraint firstAttribute="height" constant="25" id="FeJ-qo-7ED"/>
                                 </constraints>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eJv-Ts-Qhg" customClass="ShadowedView" customModule="exarea" customModuleProvider="target">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eJv-Ts-Qhg" customClass="ShadowedView" customModule="exarea" customModuleProvider="target">
                                 <rect key="frame" x="56.5" y="279.5" width="262.5" height="40"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fk1-j9-aBW">
@@ -902,7 +905,7 @@
                                     <outlet property="contentView" destination="Fk1-j9-aBW" id="c5E-6f-nDb"/>
                                 </connections>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mY0-Rs-i8t">
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillProportionally" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mY0-Rs-i8t">
                                 <rect key="frame" x="47.5" y="349.5" width="280" height="60"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85T-Bt-MCg">
@@ -939,14 +942,21 @@
                                     <constraint firstItem="85T-Bt-MCg" firstAttribute="height" secondItem="VMS-YD-uBL" secondAttribute="height" id="g92-zw-d1Z"/>
                                 </constraints>
                             </stackView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="voW-sN-8wn">
-                                <rect key="frame" x="79" y="466" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" editable="NO" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="voW-sN-8wn">
+                                <rect key="frame" x="0.0" y="466" width="375" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="IRANSans" family="IRANSans" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Mj-BH-PuY" customClass="Floaty" customModule="Floaty">
+                                <rect key="frame" x="305" y="597" width="50" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="1Mj-BH-PuY" secondAttribute="height" id="Aat-jc-Bpr"/>
+                                    <constraint firstAttribute="height" constant="50" id="yob-hU-qXD"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -954,27 +964,37 @@
                             <constraint firstItem="rXK-vN-nEY" firstAttribute="leading" secondItem="50D-Bw-kQ0" secondAttribute="leading" id="9pY-bg-AO6"/>
                             <constraint firstItem="bA2-lf-sCU" firstAttribute="centerX" secondItem="rXK-vN-nEY" secondAttribute="centerX" id="AUm-fB-Gdx"/>
                             <constraint firstItem="eJv-Ts-Qhg" firstAttribute="centerX" secondItem="50D-Bw-kQ0" secondAttribute="centerX" id="B9G-xq-tio"/>
+                            <constraint firstItem="50D-Bw-kQ0" firstAttribute="trailing" secondItem="1Mj-BH-PuY" secondAttribute="trailing" constant="20" id="BOp-89-H3T"/>
                             <constraint firstItem="eJv-Ts-Qhg" firstAttribute="width" secondItem="sAl-U1-1ar" secondAttribute="width" multiplier="0.7" id="COV-UN-Dbr"/>
                             <constraint firstItem="eJv-Ts-Qhg" firstAttribute="top" secondItem="oF6-oE-POU" secondAttribute="bottom" constant="20" id="H2c-r6-mYG"/>
-                            <constraint firstItem="mY0-Rs-i8t" firstAttribute="top" secondItem="eJv-Ts-Qhg" secondAttribute="bottom" constant="30" id="c1D-ol-KlG"/>
+                            <constraint firstItem="voW-sN-8wn" firstAttribute="top" secondItem="mY0-Rs-i8t" secondAttribute="bottom" constant="10" id="LEC-Pw-C2o"/>
+                            <constraint firstItem="voW-sN-8wn" firstAttribute="leading" secondItem="50D-Bw-kQ0" secondAttribute="leading" id="LLQ-ow-eNw"/>
+                            <constraint firstItem="50D-Bw-kQ0" firstAttribute="bottom" secondItem="1Mj-BH-PuY" secondAttribute="bottom" constant="20" id="YTT-57-1Uc"/>
+                            <constraint firstItem="mY0-Rs-i8t" firstAttribute="top" secondItem="eJv-Ts-Qhg" secondAttribute="bottom" constant="20" id="c1D-ol-KlG"/>
                             <constraint firstItem="rXK-vN-nEY" firstAttribute="top" secondItem="50D-Bw-kQ0" secondAttribute="top" id="cxF-MP-2bn"/>
                             <constraint firstItem="50D-Bw-kQ0" firstAttribute="trailing" secondItem="ZXZ-MT-5if" secondAttribute="trailing" constant="10" id="fBE-Ba-EMx"/>
                             <constraint firstAttribute="trailing" secondItem="rXK-vN-nEY" secondAttribute="trailing" id="g0C-HJ-DXe"/>
                             <constraint firstItem="mY0-Rs-i8t" firstAttribute="centerX" secondItem="eJv-Ts-Qhg" secondAttribute="centerX" id="iyK-4A-DB7"/>
                             <constraint firstItem="ZXZ-MT-5if" firstAttribute="centerY" secondItem="oF6-oE-POU" secondAttribute="centerY" id="mUH-Ef-ljd"/>
+                            <constraint firstItem="50D-Bw-kQ0" firstAttribute="trailing" secondItem="voW-sN-8wn" secondAttribute="trailing" id="tMy-b2-l3u"/>
                             <constraint firstItem="bA2-lf-sCU" firstAttribute="centerY" secondItem="rXK-vN-nEY" secondAttribute="bottom" id="tjz-5c-LVA"/>
                             <constraint firstItem="oF6-oE-POU" firstAttribute="centerY" secondItem="bA2-lf-sCU" secondAttribute="bottom" multiplier="0.97" id="vKw-CI-99M"/>
+                            <constraint firstItem="50D-Bw-kQ0" firstAttribute="bottom" secondItem="voW-sN-8wn" secondAttribute="bottom" id="wx1-PM-K7E"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="50D-Bw-kQ0"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="icon-home-75" id="KRW-9M-STO"/>
                     <connections>
+                        <outlet property="buttonFavorite" destination="cOF-xZ-HiT" id="mLx-RH-NP6"/>
                         <outlet property="buttonFiles" destination="VMS-YD-uBL" id="5nz-Ch-zqG"/>
                         <outlet property="buttonProducts" destination="85T-Bt-MCg" id="PmN-bh-RGk"/>
                         <outlet property="buttonTicket" destination="k3y-Jo-cO5" id="0Yi-Ps-2bQ"/>
+                        <outlet property="cosmosViewScore" destination="oF6-oE-POU" id="j3e-HL-gPA"/>
+                        <outlet property="floaty" destination="1Mj-BH-PuY" id="FdK-gl-rv4"/>
                         <outlet property="imageViewLogo" destination="bA2-lf-sCU" id="HDR-zX-rNq"/>
                         <outlet property="labelBoothName" destination="PmC-Rg-1Mx" id="5ob-vK-d2p"/>
                         <outlet property="slideShow" destination="rXK-vN-nEY" id="btE-W5-8uC"/>
+                        <outlet property="textViewAbout" destination="voW-sN-8wn" id="Epd-PI-cIs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IjF-fD-jVe" userLabel="First Responder" sceneMemberID="firstResponder"/>
